Added module-info to the modules and fixed javadoc